<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>demo</groupId>
    <artifactId>micronaut-source-launcher</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <micronaut.platform.version>4.10.14</micronaut.platform.version>
        <native.maven.plugin.version>0.10.6</native.maven.plugin.version>
        <exec.maven.plugin.version>3.5.0</exec.maven.plugin.version>
        <maven.dependency.plugin.version>3.8.1</maven.dependency.plugin.version>
        <slf4j.version>2.0.17</slf4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.micronaut.platform</groupId>
                <artifactId>micronaut-platform</artifactId>
                <version>${micronaut.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-http-server-netty</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-http-client</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut.validation</groupId>
            <artifactId>micronaut-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-inject-java</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut.validation</groupId>
            <artifactId>micronaut-validation-processor</artifactId>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.build.directory}/launcher-libs</directory>
                <targetPath>launcher-libs</targetPath>
                <includes>
                    <include>*.jar</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven.dependency.plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-launcher-libs</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.directory}/launcher-libs</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>write-launcher-lib-index</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>sh</executable>
                            <arguments>
                                <argument>-c</argument>
                                <argument>cd "$1/launcher-libs" &amp;&amp; find . -name '*.jar' | sed 's#^\./#launcher-libs/#' | sort &gt; "$1/launcher-libs.index"</argument>
                                <argument>sh</argument>
                                <argument>${project.build.outputDirectory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>demo.MicronautSourceLauncher</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native.maven.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <imageName>micronaut</imageName>
                    <mainClass>demo.MicronautSourceLauncher</mainClass>
                    <buildArgs>
                        <buildArg>--add-modules=jdk.compiler</buildArg>
                        <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                        <buildArg>-H:+RuntimeClassLoading</buildArg>
                        <buildArg>-H:+AllowJRTFileSystem</buildArg>
                        <buildArg>-H:+SharedArenaSupport</buildArg>
                        <buildArg>--enable-url-protocols=jar</buildArg>
                        <buildArg>-H:Preserve=module=java.base,package=java.*,package=jdk.internal.*,package=sun.*,module=jdk.compiler,module=java.compiler,package=io.micronaut.*,package=jakarta.annotation,package=jakarta.annotation.*,package=jakarta.inject,package=jakarta.inject.*,package=jakarta.validation,package=jakarta.validation.*,package=org.objectweb.asm,package=org.objectweb.asm.*,package=com.github.javaparser,package=com.github.javaparser.*</buildArg>
                        <buildArg>-H:IncludeResources=launcher-libs/.*\.jar|launcher-libs.index</buildArg>
                        <buildArg>--initialize-at-run-time=io.micronaut</buildArg>
                        <buildArg>--initialize-at-run-time=jdk.internal.org.jline.terminal.impl.ffm</buildArg>
                        <buildArg>--initialize-at-build-time=io.micronaut.annotation.processing,io.micronaut.inject.annotation,io.micronaut.inject.beans,io.micronaut.inject.beans.visitor,io.micronaut.inject.processing,io.micronaut.inject.validation,io.micronaut.inject.writer,io.micronaut.inject.provider,io.micronaut.validation.transformer,io.micronaut.validation.transformer.ValidationAnnotationRemapper,io.micronaut.validation.validator,io.micronaut.validation.validator.DefaultAnnotatedElementValidator,io.micronaut.validation.validator.constraints,io.micronaut.validation.validator.constraints.ConstraintValidator,io.micronaut.validation.validator.messages,io.micronaut.validation.validator.messages.DefaultMessages,io.micronaut.validation.visitor,jakarta.validation.ConstraintValidator,io.micronaut.core.beans,io.micronaut.core.beans.DefaultBeanIntrospector,io.micronaut.core.io,io.micronaut.core.optim,io.micronaut.core.util,io.micronaut.core.bind,io.micronaut.core.convert,io.micronaut.core.convert.ConversionContext,io.micronaut.core.convert.ImmutableArgumentConversionContext,io.micronaut.core.type,io.micronaut.core.annotation,io.micronaut.core.annotation.AnnotationValue,io.micronaut.core.annotation.AnnotationValueResolver,io.micronaut.core.reflect.ReflectionUtils,io.micronaut.core.async,io.micronaut.core.async.annotation,io.micronaut.http.util,io.micronaut.sourcegen,io.micronaut.aop.mapper,io.micronaut.context.AbstractMessageSource,io.micronaut.context.AbstractMessageSource$MessageKey,io.micronaut.context.ExecutionHandleLocator,io.micronaut.context.ExecutionHandleLocator$1,io.micronaut.context.MessageSource,io.micronaut.context.MessageSource$1,io.micronaut.context.StaticMessageSource,io.micronaut.context.visitor,com.sun.tools.javac.api.JavacTool,org.objectweb.asm,org.slf4j.helpers.NOPLogger,org.slf4j.simple,org.slf4j.simple.SimpleLogger</buildArg>
                        <buildArg>--initialize-at-run-time=io.micronaut.core.io.socket.SocketUtils,io.micronaut.core.util.KotlinUtils,io.micronaut.core.type.RuntimeTypeInformation$LazyTypeInfo</buildArg>
                        <buildArg>--enable-http</buildArg>
                        <buildArg>--enable-https</buildArg>
                    </buildArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>pgo-sampling</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <configuration>
                            <imageName>micronaut-profiled</imageName>
                            <buildArgs combine.children="append">
                                <buildArg>--pgo-sampling</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>pgo</id>
            <properties>
                <pgo.profile>target/pgo/hello.iprof</pgo.profile>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <configuration>
                            <imageName>micronaut-pgo</imageName>
                            <buildArgs combine.children="append">
                                <buildArg>--pgo=${pgo.profile}</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
